@@ -4,6 +4,7 @@ package acme.entities.flights;
 import java.util.Comparator;
 import java.util.Date;
 import java.util.List;
+import java.util.stream.Collectors;
 
 import javax.persistence.Entity;
 import javax.persistence.ManyToOne;
@@ -18,6 +19,7 @@ import acme.client.components.validation.Optional;
 import acme.client.components.validation.ValidMoney;
 import acme.client.components.validation.ValidString;
 import acme.client.helpers.SpringHelper;
+import acme.constraints.ValidFlight;
 import acme.entities.airline.Airline;
 import acme.entities.legs.Leg;
 import acme.entities.legs.LegRepository;
@@ -28,7 +30,7 @@ import lombok.Setter;
 @Entity
 @Getter
 @Setter
-// @ValidFlight
+@ValidFlight
 public class Flight extends AbstractEntity {
 
 	// Serialisation version --------------------------------------------------
@@ -73,7 +75,7 @@ public class Flight extends AbstractEntity {
 
 		repository = SpringHelper.getBean(LegRepository.class);
 		wrapper = repository.findLegsByFlightId(this.getId());
-		orderedWrapper = wrapper.stream().sorted(Comparator.comparing(Leg::getScheduledDeparture)).toList();
+		orderedWrapper = wrapper.stream().sorted(Comparator.comparing(Leg::getScheduledDeparture)).collect(Collectors.toList());
 		res = orderedWrapper.getFirst().getScheduledDeparture();
 
 		return res;
@@ -88,7 +90,7 @@ public class Flight extends AbstractEntity {
 
 		repository = SpringHelper.getBean(LegRepository.class);
 		wrapper = repository.findLegsByFlightId(this.getId());
-		orderedWrapper = wrapper.stream().sorted(Comparator.comparing(Leg::getScheduledArrival)).toList();
+		orderedWrapper = wrapper.stream().sorted(Comparator.comparing(Leg::getScheduledArrival)).collect(Collectors.toList());
 		res = orderedWrapper.getLast().getScheduledArrival();
 
 		return res;
@@ -103,7 +105,7 @@ public class Flight extends AbstractEntity {
 
 		repository = SpringHelper.getBean(LegRepository.class);
 		wrapper = repository.findLegsByFlightId(this.getId());
-		orderedWrapper = wrapper.stream().sorted(Comparator.comparing(Leg::getScheduledDeparture)).toList();
+		orderedWrapper = wrapper.stream().sorted(Comparator.comparing(Leg::getScheduledDeparture)).collect(Collectors.toList());
 		res = orderedWrapper.getFirst().getDepartureAirport().getCity();
 
 		return res;
@@ -118,7 +120,7 @@ public class Flight extends AbstractEntity {
 
 		repository = SpringHelper.getBean(LegRepository.class);
 		wrapper = repository.findLegsByFlightId(this.getId());
-		orderedWrapper = wrapper.stream().sorted(Comparator.comparing(Leg::getScheduledArrival)).toList();
+		orderedWrapper = wrapper.stream().sorted(Comparator.comparing(Leg::getScheduledArrival)).collect(Collectors.toList());
 		res = orderedWrapper.getLast().getArrivalAirport().getCity();
 
 		return res;
